@@ -74,7 +74,7 @@ type configuration_value =
   | Int of int
   | Bool of bool
 
-let configuration_variables =
+let configuration_variables () =
   let p x v = (x, String v) in
   let p_int x v = (x, Int v) in
   let p_bool x v = (x, Bool v) in
@@ -122,6 +122,7 @@ let configuration_variables =
   p_bool "supports_shared_libraries" supports_shared_libraries;
   p_bool "native_dynlink" native_dynlink;
   p_bool "naked_pointers" naked_pointers;
+  p_bool "compression_supported" (Marshal.compression_supported());
 
   p "exec_magic_number" exec_magic_number;
   p "cmi_magic_number" cmi_magic_number;
@@ -147,11 +148,11 @@ let print_config_value oc = function
 let print_config oc =
   let print (x, v) =
     Printf.fprintf oc "%s: %a\n" x print_config_value v in
-  List.iter print configuration_variables;
+  List.iter print (configuration_variables ());
   flush oc
 
 let config_var x =
-  match List.assoc_opt x configuration_variables with
+  match List.assoc_opt x (configuration_variables()) with
   | None -> None
   | Some v ->
       let s = match v with
